<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <groupId>net.fortytwo.smsn</groupId>
    <artifactId>smsn-all</artifactId>
    <version>1.5-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Semantic Synchrony</name>
    <description>An experiment in cognitive and sensory augmentation</description>
    <url>https://github.com/synchrony/smsn</url>

    <issueManagement>
        <url>https://github.com/synchrony/smsn/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <licenses>
        <license>
            <name>The MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>git@github.com:synchrony/smsn.git</url>
        <connection>scm:git:git@github.com:synchrony/smsn.git</connection>
        <developerConnection>scm:git:git@github.com:synchrony/smsn.git</developerConnection>
    </scm>

    <contributors>
        <contributor>
            <name>Joshua Shinavier</name>
            <email>josh@fortytwo.net</email>
        </contributor>
        <contributor>
            <name>Jeffrey Brown</name>
            <email>jeffbrown.the@gmail.com</email>
        </contributor>
    </contributors>

    <properties>
        <smsn.version>1.5-SNAPSHOT</smsn.version>
        <httpcomponents.version>4.4</httpcomponents.version>
        <javaosc.version>0.3</javaosc.version>
        <junit.version>4.12</junit.version>
        <lucene.version>3.6.2</lucene.version>
        <neo4j.version>2.3.3</neo4j.version>
        <neo4j.tinkerpop.version>0.3-2.3.3</neo4j.tinkerpop.version>
        <rdfagents.version>1.3</rdfagents.version>
        <ripple.version>1.5</ripple.version>
        <sesame.version>4.1.2</sesame.version>
        <stream42.version>1.2</stream42.version>
        <sesametools.version>1.10</sesametools.version>
        <tinkerpop.version>3.2.4</tinkerpop.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <modules>
        <module>smsn-core</module>
        <module>brain</module>
        <module>smsn-services</module>
        <module>smsn-rdf</module>
        <module>smsn-server</module>
        <module>smsn-devices</module>
        <module>monitron</module>
        <module>hand</module>
        <module>typeatron</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <!-- this is the version used by Android 2.2.1 -->
                <version>20080701</version>
            </dependency>
            <dependency>
                <groupId>net.fortytwo.rdfagents</groupId>
                <artifactId>rdfagents-core</artifactId>
                <!--<artifactId>rdfagents-jade</artifactId>-->
                <version>${rdfagents.version}</version>
                <exclusions>
                    <!-- conflict with SesameStream -->
                    <exclusion>
                        <groupId>com.fasterxml.jackson.core</groupId>
                        <artifactId>jackson-core</artifactId>
                    </exclusion>
                    <!-- exclude the XMPP MTP, which is currently not used by Brainstem
                         and which contains a Crimson XML dependency which is incompatible with Android -->
                    <exclusion>
                        <groupId>com.tilab.jade</groupId>
                        <artifactId>xmpp-mtp</artifactId>
                    </exclusion>
                    <!-- via sesame-sail-memory. The Brainstem doesn't need a SPARQL repository -->
                    <exclusion>
                        <groupId>org.openrdf.sesame</groupId>
                        <artifactId>sesame-repository-sparql</artifactId>
                    </exclusion>
                    <!-- conflict with HttpComponents -->
                    <exclusion>
                        <groupId>commons-codec</groupId>
                        <artifactId>commons-codec</artifactId>
                    </exclusion>
                    <!-- conflict with SesameStream -->
                    <exclusion>
                        <groupId>com.fasterxml.jackson.core</groupId>
                        <artifactId>jackson-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.openrdf.sesame</groupId>
                <artifactId>sesame-sail-memory</artifactId>
                <version>${sesame.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-codec</groupId>
                        <artifactId>commons-codec</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.4.0</version>
                <exclusions>
                    <!-- conflict with Apache HttpComponents -->
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <directory>${basedir}/target</directory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.5.1</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <!-- TODO: restore me
                <plugin>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.3.1</version>
                    <executions>
                        <execution>
                            <id>enforce-dependency-convergence</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <DependencyConvergence/>
                                    <requireJavaVersion>
                                        <version>[1.7,1.8]</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin> -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.12</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.4</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.1.2</version>
                    <executions>
                        <execution>
                            <id>attach-source</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.8.1</version>
                    <executions>
                        <execution>
                            <id>attach-javadoc</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>aggregate</id>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                            <phase>site</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
